add udpsink sample

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 include_directories(${LIBGST_INCLUDE_DIRS})
 add_executable(GStreamerTemplate
-        mp3play_multi.c)
+        mp3send_multisrc_udpsink.c)
 target_link_libraries(GStreamerTemplate
         ${LIBGST_LIBRARIES})
